--- a/.github/workflows/1day1.yml
+++ b/.github/workflows/1day1.yml
@@ -49,7 +49,7 @@ jobs:
           mkdir -p ./error/         
           cd ./node/
           npm i  
-          node ./1day.js          
+          node ./1day1.js          
         env:
           NODE_SHOPEE_ACCESS_TOKEN: ${{ secrets.NODE_SHOPEE_ACCESS_TOKEN }}  
           NODE_SHOPEE_REFRESH_TOKEN: ${{ secrets.NODE_SHOPEE_REFRESH_TOKEN }}
