--- a/.github/workflows/1day1.yml
+++ b/.github/workflows/1day1.yml
@@ -3,8 +3,8 @@ on:
   # 手动触发
   workflow_dispatch:
   # 定时器
-  schedule:
-   - cron: "0 0 * * *"
+  # schedule:
+  #  - cron: "0 0 * * *"
 env:  
   TZ: Asia/Shanghai
 
