--- a/.github/workflows/1day1.yml
+++ b/.github/workflows/1day1.yml
@@ -30,10 +30,9 @@ jobs:
           
       - name: 安装文泉驿字体     
         run: |
-          sudo timedatectl set-timezone "$TZ"
-          sudo yum install wqy-microhei-fonts.noarch -y
-          sudo yum install wqy-unibit-fonts.noarch -y
-          sudo yum install wqy-zenhei-fonts.noarch -y
+          sudo apt-get install wqy-microhei-fonts.noarch -y
+          sudo apt-get install wqy-unibit-fonts.noarch -y
+          sudo apt-get install wqy-zenhei-fonts.noarch -y
           
       - name: 下载并运行rendie-nextjs       
         run: |        
