--- a/.github/workflows/1day.yml
+++ b/.github/workflows/1day.yml
@@ -2,8 +2,8 @@ name: 每天运执一次nextjs和node
 
 on:
   workflow_dispatch: 
-  # schedule:
-  #  - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"
 
 env:  
   TZ: Asia/Shanghai
